--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,19 @@
 name: Your CICD Pipeline Name
 on: [push]
 jobs:
-  job:
+  hello:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Hello World!
       run: echo Hello, World!!
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Title 
+      run: echo Format GO code
+    - name: Go Formatter
+      # You may pin to the exact commit or the version.
+      # uses: sladyn98/auto-go-format@6557e892479fd174506c48cb34017c51399d492b
+      uses: sladyn98/auto-go-format@v0.0.1
